--- a/src/webparts/pnPjsExample/PnPjsExampleWebPart.manifest.json
+++ b/src/webparts/pnPjsExample/PnPjsExampleWebPart.manifest.json
@@ -16,7 +16,7 @@
     "description": { "default": "PnPJSExample  description" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "PnPJSExample "
+      "listname": "Demolist"
     }
   }]
 }
